<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/partial_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_image_home"
        android:layout_marginTop="@dimen/small_image_home"
        android:text="@string/singup_password_title"
        android:textColor="@color/colorblack"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signinPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_image_home"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:textColorHint="@color/colorblack" />

    <EditText
        android:id="@+id/signinPasswordAgainEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_image_home"
        android:hint="@string/singup_hint_password_again"
        android:inputType="numberPassword"
        android:textColorHint="@color/colorblack" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="invisible" />

    <Button
        android:id="@+id/loginSigninBtn"
        style="@style/ButtonGreenTextWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_image"
        android:text="@string/btn_continue" />

</LinearLayout>