<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarEvent"
            layout="@layout/partial_toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_image_home"
            android:layout_marginTop="@dimen/small_image_home"
            android:text="@string/title_event"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"/>


        <com.example.colabore.ui.widget.DefaultEditText
            android:id="@+id/eventTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_large"
            android:layout_marginEnd="@dimen/vertical_margin_large"
            android:layout_marginStart="@dimen/vertical_margin_large"
            android:textColor="@color/colorblack"
            app:etEmptinessIsValid="false"
            app:etInputTextType="custom"
            app:hint="@string/singup_hint_event"
            app:textColor="@color/colorblack"
            app:toggleColor="@color/colorblack" />

        <EditText
            android:id="@+id/descriptionEventEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginTop="@dimen/vertical_margin_large"
            android:layout_marginEnd="@dimen/vertical_margin_large"
            android:layout_marginStart="@dimen/vertical_margin_large"
            android:textColor="@color/colorblack"
            android:hint="@string/singup_hint_drescription_event"
            android:textColorHint="@color/colorblack" />



        <!--Existe somente para deixar o botão no fundo do layout-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/eventBtn"
            style="@style/ButtonGreenTextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_image"
            android:text="@string/btn_send" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>