<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/horizontal_margin_large"
            android:paddingEnd="@dimen/horizontal_margin_large">

            <ImageView
                android:id="@+id/logoIv"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_earth" />

            <com.example.colabore.ui.widget.DefaultEditText
                android:id="@+id/loginCpfEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_large"
                android:textColor="@color/colorblack"
                app:etEmptinessIsValid="false"
                text = "25316577035"
                app:etInputTextType="cpfOrCnpj"
                app:hint="@string/hint_cpf_cnpj"
                app:layout_constraintBottom_toTopOf="@id/loginPasswordEt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoIv"
                app:textColor="@color/colorblack"
                app:toggleColor="@color/colorblack" />

            <com.example.colabore.ui.widget.DefaultEditText
                android:id="@+id/loginPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                app:etEmptinessIsValid="false"
                app:etInputTextType="name"
                app:hint="@string/hint_password"
                text = "Teste123"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginCpfEt"
                app:textColor="@color/colorblack"
                app:toggleColor="@color/colorGreen"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/loginForgotPasswordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/vertical_margin"
                android:textColor="@color/colorGreen"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPasswordEt" />

            <Button
                android:id="@+id/loginSigninBtn"
                style="@style/ButtonGreenTextWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/btn_enter"
                app:layout_constraintBottom_toTopOf="@+id/loginRegisterBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginForgotPasswordTv"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/loginRegisterBtn"
                style="@style/ButtonWhiteTextGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/small_image_home"
                android:text="@string/btn_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginSigninBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>