<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include
        android:id="@+id/include2"
        layout="@layout/partial_toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_image_home"
        android:text="@string/singup_choose_one"
        android:textColor="@color/colorblack"
        android:layout_gravity="center|bottom"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/card_height"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/donorCv"
            android:layout_width="@dimen/card_height"
            android:layout_height="@dimen/card_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_image"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            app:cardBackgroundColor="@color/colorGreen"
            app:cardCornerRadius="@dimen/button_deafult">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:duplicateParentState="true"
                android:layout_marginTop="@dimen/small_image"
                android:layout_marginEnd="2dp"
                android:src="@drawable/ic_donor_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup_donor"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="@dimen/small_image"
                android:duplicateParentState="true"
                android:textSize="@dimen/text_subtitle"
                android:textStyle="bold"/>


    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ngoCv"
            android:layout_width="@dimen/card_height"
            android:layout_height="@dimen/card_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/small_image"
            android:duplicateParentState="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorGreen"
            app:cardCornerRadius="@dimen/button_deafult">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insurance"
                android:duplicateParentState="true"
                android:layout_gravity="center|top"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup_ngo"
                android:duplicateParentState="true"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="@dimen/small_image"
                android:textSize="@dimen/text_subtitle"
                android:textStyle="bold"/>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
